--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,17 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/com.netflix.hystrix/hystrix-core -->
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-core</artifactId>
+			<version>1.5.18</version>
+		</dependency>
+
+
+
+
+
 
 	</dependencies>
 
