Able to run multiple instances

--- a/pom.xml
+++ b/pom.xml
@@ -74,10 +74,12 @@
 			<artifactId>hystrix-core</artifactId>
 			<version>1.5.18</version>
 		</dependency>
-
-
-
-
+		<!-- https://mvnrepository.com/artifact/org.springframework.retry/spring-retry -->
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+			<version>1.2.5.RELEASE</version>
+		</dependency>
 
 
 	</dependencies>
