--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
   profiles:
   cloud:
     consul:
-      host: 172.28.1.253
+      host: localhost
       port: 8500
       discovery:
         enabled: true
