--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 
 #zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 #spring.cloud.loadbalancer.retry.enabled=true
+
+
+#Set the Hystrix isolation policy to the thread pool
+
+zuul.ribbon-isolation-strategy=thread
+
+#each route uses a separate thread pool
+
+zuul.thread-pool.use-separate-thread-pools=true
+
