Shutdown a Spring Boot Application via Endpoint
curl -X POST localhost:port/actuator/shutdown

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,6 +86,9 @@ management:
     web:
       exposure:
         include: '*'
+  endpoint:
+    shutdown:
+      enabled: true
 #  endpoint:
 #    health:
 #      show-details: always
