--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -27,7 +27,7 @@ spring:
     consul:
       discovery:
         enabled: true
-        instance-id: apigateway-service
+        instance-id: ${spring.application.name}:${random.value}
         service-name: apigateway-service
         prefer-ip-address: true
         register-health-check: true
@@ -41,7 +41,7 @@ spring:
     consul:
       discovery:
         enabled: true
-        instance-id: apigateway-service
+        instance-id: ${spring.application.name}:${random.value}
         service-name: apigateway-service
         prefer-ip-address: true
         register-health-check: true
