--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   gateway:
     build: .
     image: esswhye/arvent-gateway
+    ports:
+      - "8080:8080"
     environment:
       SPRING_PROFILES_ACTICE: dt
     networks:
