--- a/DockerfileTest
+++ b/DockerfileTest
@@ -10,9 +10,9 @@
 # Package Stage
 #
 FROM java:8-jdk
-#ARG JAR_FILE=target/*.jar
-#COPY ${JAR_FILE} app.jar
-COPY --from=build target/*-SNAPSHOT.jar app.jar
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
+#COPY --from=build target/*-SNAPSHOT.jar app.jar
 
 ENV JAVA_HOME              /usr/lib/jvm/java-8-openjdk-amd64
 ENV PATH                   $PATH:$JAVA_HOME/bin
