--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   gateway:
     build: DockerfileTest
-    image: esswhye/arvent-gateway
+    image: esswhye/arvent-gateway:latest
     ports:
       - "8010:8080"
     environment:
