--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -101,7 +101,8 @@ management:
     web:
       exposure:
         include: '*'
-#      cors:
+      #base-path: /
+  #      cors:
 #        allow-credentials: true
 #        allowed-origins: '*'
 #        allowed-headers: Origin, X-Requested-With, Content-Type, Accept, Connection, User-Agent, Cookie
