--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -13,8 +13,13 @@ spring:
         enabled: true
         instance-id: ${spring.application.name}:${random.value}
         service-name: apigateway-service
+        prefer-ip-address: true
         register-health-check: true
         health-check-interval: 15s
+      config:
+        enabled: true
+        watch:
+          enabled: true
 #      retry:
 #        initial-interval: 1000
 #        max-attempts: 10
@@ -31,6 +36,10 @@ spring:
         service-name: apigateway-service
         prefer-ip-address: true
         register-health-check: true
+      config:
+          enabled: true
+          watch:
+            enabled: true
       host: consul
       port: 8500
 
