--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -36,7 +36,8 @@ spring:
         service-name: apigateway-service
         prefer-ip-address: true
         register-health-check: true
-        health-check-interval: 15s
+        health-check-interval: 30s
+        health-check-timeout: 30s
       config:
           enabled: true
           watch:
