--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -19,6 +19,7 @@ spring:
         prefer-ip-address: true
         register-health-check: true
         health-check-interval: 15s
+        health-check-url: http://localhost:${server.port}/actuator/health
       config:
         enabled: true
         watch:
@@ -41,7 +42,7 @@ spring:
         register-health-check: true
         health-check-interval: 15s
         health-check-timeout: 120s
-        health-check-url: localhost:${server.port}/actuator/health
+        health-check-url: http://localhost:${server.port}/actuator/health
       #healthCheckCriticalTimeout: 5m
       host: consul
       port: 8500
