enable log created volumes in docker binded to \var\lib\docker\volumes\arvent_my-arvent\_data\gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,12 @@ services:
       - arvent_backend
     deploy:
       replicas: 1
-      
+    volumes:
+      - my-arvent:/app
+
 networks:
   arvent_backend:
     external: true
+
+volumes:
+  my-arvent:
