enable log created volumes in docker binded to \var\lib\docker\volumes\arvent_my-arvent\_data\gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       - arvent_backend
     deploy:
       replicas: 1
-      replicas-max-per-node: 1
+      placement:
+        max_replicas_per_node: 1
     volumes:
       - my-arvent:/app
 
