--- a/DockerfileTest
+++ b/DockerfileTest
@@ -1,35 +1,24 @@
-#
-# Build stage
-#
-#FROM maven:3.6.0-jdk-8-slim AS build
-#COPY src /src
-#COPY pom.xml .
-#RUN mvn -f pom.xml clean package
-#RUN  mvn -f pom.xml package -Dmaven.test.skip=true
-#
-# Package Stage
-#
-FROM java:8-jdk
+FROM openjdk:11-jre-alpine
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 #COPY --from=build target/*-SNAPSHOT.jar app.jar
 
-ENV JAVA_HOME              /usr/lib/jvm/java-8-openjdk-amd64
-ENV PATH                   $PATH:$JAVA_HOME/bin
-ENV JAVA_OPTIONS    -Xmx256m
+#ENV JAVA_HOME              /usr/lib/jvm/java-8-openjdk-amd64
+#ENV PATH                   $PATH:$JAVA_HOME/bin
+#ENV JAVA_OPTIONS    -Xmx256m
 ENV TIME_ZONE Asia/Singapore
 
 ENV SPRING_PROFILES_ACTIVE dt
 
 RUN echo "$TIME_ZONE" > /etc/timezone
-RUN dpkg-reconfigure -f noninteractive tzdata
+#RUN dpkg-reconfigure -f noninteractive tzdata
 
 WORKDIR /app/gateway
 
 #TESTING
 EXPOSE 8081
 
-ENTRYPOINT ["java","-jar","/app.jar","-Djava.security.egd=file:/dev/./urandom", "-Dspring.profiles.active=dt", "-XX:+UseG1GC", "-Xmx128m", "-Xms32m"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-Dspring.profiles.active=dt", "-XX:+UseG1GC", "-Xmx128m", "-Xms32m" "-jar" ,"/app.jar"]
 
 #"-Dspring.profiles.active=dt"
 
