--- a/DockerfileTest
+++ b/DockerfileTest
@@ -1,4 +1,4 @@
-FROM openjdk:11-jdk-slim
+FROM openjdk:11-jre-slim
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 #COPY --from=build target/*-SNAPSHOT.jar app.jar
