--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,10 @@ version: "3.8"
 services:
 
   gateway:
-    build: DockerfileTest
+    build:
+      context: .
+      dockerfile:
+        DockerfileTest
     image: esswhye/arvent-gateway:latest
     ports:
       - "8010:8081"
