--- a/DockerfileTest
+++ b/DockerfileTest
@@ -10,8 +10,8 @@ ENV TIME_ZONE Asia/Singapore
 
 ENV SPRING_PROFILES_ACTIVE dt
 
-#RUN echo "$TIME_ZONE" > /etc/timezone
-#RUN dpkg-reconfigure -f noninteractive tzdata
+RUN echo "$TIME_ZONE" > /etc/timezone
+RUN dpkg-reconfigure -f noninteractive tzdata
 
 WORKDIR /app/gateway
 
