--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - arvent_backend
     deploy:
       replicas: 1
-      placement:
-        max_replicas_per_node: 1
+#      placement:
+#        max_replicas_per_node: 1
     volumes:
       - my-arvent:/app
 
