--- a/DockerfileTest
+++ b/DockerfileTest
@@ -6,12 +6,11 @@ COPY ${JAR_FILE} app.jar
 #ENV JAVA_HOME              /usr/lib/jvm/java-8-openjdk-amd64
 #ENV PATH                   $PATH:$JAVA_HOME/bin
 #ENV JAVA_OPTIONS    -Xmx256m
-ENV TIME_ZONE Asia/Singapore
+ENV TZ Asia/Singapore
 
 ENV SPRING_PROFILES_ACTIVE dt
 
-RUN echo "$TIME_ZONE" > /etc/timezone
-RUN dpkg-reconfigure -f noninteractive tzdata
+RUN echo "$TIME_ZONE" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
 
 WORKDIR /app/gateway
 
