--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,11 @@ services:
       - arvent_backend
     deploy:
       replicas: 1
-#      placement:
-#        max_replicas_per_node: 1
+    #      placement:
+    #        max_replicas_per_node: 1
     volumes:
       - my-arvent:/app
+      - shareclasess:/opt/shareclasses
 
 networks:
   arvent_backend:
@@ -27,3 +28,4 @@ networks:
 
 volumes:
   my-arvent:
+  shareclasses:
