--- a/DockerfileTest
+++ b/DockerfileTest
@@ -3,7 +3,8 @@ FROM adoptopenjdk:11-jre-openj9
 #COPY ${JAR_FILE} app.jar
 #COPY --from=build target/*-SNAPSHOT.jar app.jar
 RUN mkdir /opt/app
-COPY japp.jar /opt/app
+RUN mkdir /opt/shareclasses
+COPY ${JAR_FILE} japp.jar /opt/app
 
 
 #ENV JAVA_HOME              /usr/lib/jvm/java-8-openjdk-amd64
@@ -22,7 +23,7 @@ EXPOSE 8081
 
 #ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-Dspring.profiles.active=dt", "-XX:+UseG1GC", "-Xmx128m", "-Xms32m" "-jar" ,"/app.jar"]
 CMD ["java", "-jar","-Xmx128m", "-XX:+IdleTuningGcOnIdle", "-Xtune:virtualized", "-Xscmx128m", "-Xscmaxaot100m", "-Dspring.profiles.active=dt","/opt/app/japp.jar"]
-#ENTRYPOINT ["java","-Dspring.profiles.active=dt", "-XX:+UseG1GC", "-Xmx128m", "-Xms32m", "-jar" ,"/app.jar"]
+#ENTRYPOINT ["java","-Dspring.profiles.active=dt", "-XX:+UseG1GC", "-Xmx128m", "-Xms32m", "-jar" ,"-Xshareclasses:cacheDir=/opt/shareclasses","/app.jar"]
 
 #"-Dspring.profiles.active=dt"
 
