--- a/DockerfileTest
+++ b/DockerfileTest
@@ -1,6 +1,6 @@
 FROM adoptopenjdk:11-jre-openj9
 #ARG JAR_FILE=target/*.jar
-#COPY ${JAR_FILE} app.jar
+COPY ${JAR_FILE} app.jar
 #COPY --from=build target/*-SNAPSHOT.jar app.jar
 RUN mkdir /opt/app
 RUN mkdir /opt/shareclasses
