--- a/DockerfileTest
+++ b/DockerfileTest
@@ -14,7 +14,7 @@ ENV TZ Asia/Singapore
 
 ENV SPRING_PROFILES_ACTIVE dt
 
-RUN echo "$TIME_ZONE" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
+#RUN echo "$TIME_ZONE" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
 
 WORKDIR /app/gateway
 
