--- a/DockerfileTest
+++ b/DockerfileTest
@@ -4,7 +4,7 @@ ARG JAR_FILE=target/*.jar
 #COPY --from=build target/*-SNAPSHOT.jar app.jar
 RUN mkdir /opt/app
 RUN mkdir /opt/shareclasses
-COPY ${JAR_FILE} /opt/app
+COPY ${JAR_FILE} app.jar
 
 
 #ENV JAVA_HOME              /usr/lib/jvm/java-8-openjdk-amd64
@@ -22,8 +22,10 @@ WORKDIR /app/gateway
 EXPOSE 8081
 
 #ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-Dspring.profiles.active=dt", "-XX:+UseG1GC", "-Xmx128m", "-Xms32m" "-jar" ,"/app.jar"]
-CMD ["java", "-jar","-Xmx128m", "-XX:+IdleTuningGcOnIdle", "-Xtune:virtualized", "-Xscmx128m", "-Xscmaxaot100m", "-Dspring.profiles.active=dt","/opt/app/japp.jar"]
-#ENTRYPOINT ["java","-Dspring.profiles.active=dt", "-XX:+UseG1GC", "-Xmx128m", "-Xms32m", "-jar" ,"-Xshareclasses:cacheDir=/opt/shareclasses","/app.jar"]
+#CMD ["java", "-jar","-Xmx128m", "-XX:+IdleTuningGcOnIdle", "-Xtune:virtualized", "-Xscmx128m", "-Xscmaxaot100m", "-Dspring.profiles.active=dt","-Xshareclasses:cacheDir=/opt/shareclasses","/app.jar"]
+#ENTRYPOINT ["java","-Dspring.profiles.active=dt", "-XX:+UseG1GC", "-Xmx128m", "-Xms32m", "-jar" ,"/app.jar"]
+
+CMD ["java", "-jar", "-XX:+IdleTuningGcOnIdle", "-Xtune:virtualized", "-Xscmx128m", "-Xscmaxaot100m", "-Dspring.profiles.active=dt","-Xshareclasses:cacheDir=/opt/shareclasses","/app.jar"]
 
 #"-Dspring.profiles.active=dt"
 
