Add prometheus metric

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -94,6 +94,12 @@ product-service:
     ConnectTimeout: 10000
 
 management:
+  metris:
+    export:
+      prometheus:
+        enabled:
+          true
+
   endpoints:
     web:
       exposure:
