--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -40,7 +40,7 @@ spring:
         enabled: true
         instance-id: ${spring.application.name}:${random.value}
         service-name: apigateway-service
-        prefer-ip-address: true
+        #        prefer-ip-address: true
         register-health-check: true
         health-check-interval: 15s
         health-check-timeout: 120s
