--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       SPRING_PROFILES_ACTICE: dt
     networks:
       - arvent_backend
-    network_mode: host
+    network: host
     deploy:
       replicas: 1
       resources:
