OpenJ9 CMD ["java", "-jar", "-XX:+IdleTuningGcOnIdle", "-Xtune:virtualized", "-Xscmx128m", "-Xscmaxaot100m", "-Dspring.profiles.active=dt","-Xshareclasses:cacheDir=/opt/shareclasses","/app.jar"]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,6 @@ services:
       SPRING_PROFILES_ACTICE: dt
     networks:
       - arvent_backend
-    network: host
     deploy:
       replicas: 1
       resources:
@@ -27,7 +26,8 @@ services:
 
 networks:
   arvent_backend:
-    external: true
+    external:
+      name: "host"
 
 
 volumes:
