OpenJ9 CMD ["java", "-jar", "-XX:+IdleTuningGcOnIdle", "-Xtune:virtualized", "-Xscmx128m", "-Xscmaxaot100m", "-Dspring.profiles.active=dt","-Xshareclasses:cacheDir=/opt/shareclasses","/app.jar"]``

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 server:
   port: 8010
-
+  address: 0.0.0.0
 spring:
   application:
     name: apigateway-service
@@ -41,7 +41,7 @@ spring:
         register-health-check: true
         health-check-interval: 15s
         health-check-timeout: 120s
-        health-check-url:  http://localhost:${server.port}/actuator/health
+        health-check-url:  ${server.address}:${server.port}/actuator/health
         register: true
       host: consul
       port: 8500
