OpenJ9 CMD ["java", "-jar", "-XX:+IdleTuningGcOnIdle", "-Xtune:virtualized", "-Xscmx128m", "-Xscmaxaot100m", "-Dspring.profiles.active=dt","-Xshareclasses:cacheDir=/opt/shareclasses","/app.jar"]``

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       SPRING_PROFILES_ACTICE: dt
     networks:
-      - arvent_backend
+      - backend
     deploy:
       replicas: 1
       resources:
@@ -25,7 +25,7 @@ services:
       - shareclasses:/opt/shareclasses
 
 networks:
-  arvent_backend:
+  backend:
     external: true
 #    name: arvent_backend
 
