--- a/src/main/resources/application-dt.yml
+++ b/src/main/resources/application-dt.yml
@@ -58,14 +58,14 @@ ribbon:
   OkToRetryOnAllOperations: true
   retryableStatusCodes: 500,404,502,-408
 
-logging:
-  level:
-    org.springframework: ERROR
-    com.arvent: INFO
-  pattern:
-    console: "%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n"
-    file: "%d %p %c{1.} [%t] %m%n"
-  file: app.log
+#logging:
+#  level:
+#    org.springframework: ERROR
+#    com.arvent: INFO
+#  pattern:
+#    console: "%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n"
+#    file: "%d %p %c{1.} [%t] %m%n"
+#  file: app.log
 
 hystrix:
   command:
