--- a/DockerfileTest
+++ b/DockerfileTest
@@ -12,7 +12,7 @@ COPY ${JAR_FILE} app.jar
 #ENV JAVA_OPTIONS    -Xmx256m
 ENV TZ Asia/Singapore
 
-ENV SPRING_PROFILES_ACTIVE dt
+#ENV SPRING_PROFILES_ACTIVE dt
 
 #RUN echo "$TIME_ZONE" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
 
