--- a/src/main/resources/application-dt.yml
+++ b/src/main/resources/application-dt.yml
@@ -5,11 +5,16 @@
 #    allowed-headers: Origin, X-Requested-With, Content-Type, Accept, Connection, User-Agent, Cookie, OCB.SYNCER.JSESSIONID
 #    allowed-methods: POST,GET,DELETE,PUT
 #    max-age: 1800
+
 zuul:
   #prefix: /arvent
   #stripPrefix: true
   #ignored-patterns: /actuator/**
   #ignoredServices: "*"
+  ribbon-isolation-strategy: thread
+  thread-pool:
+    use-separate-thread-pools: true
+
   retryable: true
   routes:
     #ignored-patterns: /actuator/**
@@ -42,6 +47,7 @@ zuul:
   # host:
   #  connect-timeout-millis: 60000
   #  socket-timeout-millis:  60000
+
 spring:
   cloud:
     loadbalancer:
@@ -67,6 +73,7 @@ ribbon:
 #    file: "%d %p %c{1.} [%t] %m%n"
 #  file: app.log
 
+#https://stackoverflow.com/questions/48399400/backend-services-isolation-in-zuul
 hystrix:
   command:
     default:
