--- a/src/main/resources/application-dt.yml
+++ b/src/main/resources/application-dt.yml
@@ -5,6 +5,12 @@
 #    allowed-headers: Origin, X-Requested-With, Content-Type, Accept, Connection, User-Agent, Cookie, OCB.SYNCER.JSESSIONID
 #    allowed-methods: POST,GET,DELETE,PUT
 #    max-age: 1800
+spring:
+  cloud:
+    loadbalancer:
+      retry:
+        enabled: true
+  profiles: dt
 
 zuul:
   #prefix: /arvent
@@ -47,12 +53,6 @@ zuul:
   # host:
   #  connect-timeout-millis: 60000
   #  socket-timeout-millis:  60000
-
-spring:
-  cloud:
-    loadbalancer:
-      retry:
-        enabled: true
 
 ribbon:
   #  ReadTimeout: 10000
@@ -114,7 +114,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, prometheus
+        include: health
       #base-path: /
   #      cors:
   #        allow-credentials: true
