spring profile env

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -113,7 +113,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include: health , prometheus
       #base-path: /
   #      cors:
   #        allow-credentials: true
