--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,3 @@
-#endpoints:
-#  cors:
-#    allow-credentials: true
-#    allowed-origins: '*'
-#    allowed-headers: Origin, X-Requested-With, Content-Type, Accept, Connection, User-Agent, Cookie, OCB.SYNCER.JSESSIONID
-#    allowed-methods: POST,GET,DELETE,PUT
-#    max-age: 1800
 zuul:
   #prefix: /arvent
   #stripPrefix: true
@@ -114,6 +107,12 @@ management:
     web:
       exposure:
         include: health , prometheus
+      cors:
+        allow-credentials: true
+        allowed-origins: '*'
+        allowed-headers: Origin, X-Requested-With, Content-Type, Accept, Connection, User-Agent, Cookie, OCB.SYNCER.JSESSIONID
+        allowed-methods: POST,GET,DELETE,PUT
+        max-age: 1800
 
 security:
   jwt:
