--- a/src/main/resources/application-dt.yml
+++ b/src/main/resources/application-dt.yml
@@ -115,12 +115,12 @@ management:
     web:
       exposure:
         include: health, prometheus
-      cors:
-        allow-credentials: true
-        allowed-origins: '*'
-        allowed-headers: Origin, X-Requested-With, Content-Type, Accept, Connection, User-Agent, Cookie, OCB.SYNCER.JSESSIONID
-        allowed-methods: POST,GET,DELETE,PUT
-        max-age: 1800
+#      cors:
+#        allow-credentials: true
+#        allowed-origins: '*'
+#        allowed-headers: Origin, X-Requested-With, Content-Type, Accept, Connection, User-Agent, Cookie, OCB.SYNCER.JSESSIONID
+#        allowed-methods: POST,GET,DELETE,PUT
+#        max-age: 1800
 
 
 security:
